<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical"
        android:background="@drawable/bg_round_white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="18dp"
                    android:text="@string/text_warm_prompt"/>
                <ImageView
                    android:id="@+id/iv_close"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_close_gray"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_permissions_following"
                android:textSize="14dp"/>
            <TextView
                android:id="@+id/tv_permissions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text=""
                android:textSize="14dp"/>
            <Button
                android:id="@+id/btn_open"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/selector_btn_enabled"
                android:textColor="@color/colorWhite"
                android:textSize="22dp"
                android:padding="10dp"
                android:textAllCaps="false"
                android:text="@string/text_open"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>