<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:layout_gravity="center"
    android:padding="40dp"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_round_white"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--标题-->
            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="12dp"
                android:text="@string/text_logoff_notification"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"/>
            <!--小提示-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="20dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="14dp"
                    android:text="@string/text_logoff_notification_content"/>
            </LinearLayout>
            <!--分隔符-->
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/colorGray"/>
            <LinearLayout
                android:id="@+id/confirm"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/text_ok"
                    android:textSize="14dp"
                    android:textColor="@color/colorPrimary"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>