<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    style="@style/default_activiy_style">

    <include layout="@layout/navi_top_layout" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:gravity="center_vertical"
        android:padding="15dp">

        <ImageView
            android:id="@+id/user_avatar_img"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:scaleType="centerInside"
            android:src="@color/gray" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="@dimen/common_10"
            android:layout_weight="1"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/user_name_tv"
                    style="@style/default_text_view_style"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="18dp" />
                <ImageView
                    android:id="@+id/iv_user_sex"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/ic_sex_man"/>
            </LinearLayout>
            <TextView
                android:id="@+id/user_login"
                style="@style/default_text_view_style"
                android:gravity="bottom"
                android:textSize="@dimen/font16_txt_size" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_ripple"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="@color/colorBlack"
            android:text="@string/text_user_info_signatures"/>
        <TextView
            android:id="@+id/tv_user_signature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:gravity="end"
            android:textSize="16dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1px"
        android:background="@drawable/bg_ripple"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="@color/colorBlack"
            android:text="@string/text_main_dynamic"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginRight="15dp"
            android:src="@drawable/ic_user_right"/>
    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/user_apply_add_buddy_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_ripple"
        android:gravity="center"
        android:padding="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content"
            android:text="@string/text_friends_info_add"
            android:textColor="@color/colorPrimary"
            android:textSize="16dp"/>
    </LinearLayout>
    <LinearLayout
        android:visibility="gone"
        android:id="@+id/user_send_msg_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/bg_ripple"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:padding="15dp">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@mipmap/ic_send"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"
            android:text="@string/text_friends_info_send"
            android:textColor="@color/colorPrimary"
            android:textSize="16dp"/>
    </LinearLayout>
    <LinearLayout
        android:visibility="gone"
        android:id="@+id/user_remove_buddy_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/bg_ripple"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:padding="15dp">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_delete_red"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"
            android:text="@string/text_friends_info_delete"
            android:textColor="@color/red"
            android:textSize="16dp"/>
    </LinearLayout>
</LinearLayout>