<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/default_activiy_style"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">
    <!--标题栏-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:background="@drawable/bg_border_bottom">
        <com.android.widgets.MyActionBar
            android:id="@+id/myActionBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <!--列表-->
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical">
       <LinearLayout
           android:id="@+id/ll_user_avatar"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:background="@drawable/bg_ripple"
           android:paddingLeft="20dp"
           android:paddingRight="20dp"
           android:paddingTop="10dp"
           android:paddingBottom="10dp"
           android:gravity="center"
           android:orientation="horizontal">
           <TextView
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:text="@string/text_user_info_head_portrait"
               android:textSize="14dp"
               android:textColor="@color/colorBlack"/>
           <ImageView
               android:id="@+id/iv_user_avatar"
               android:layout_width="40dp"
               android:layout_height="40dp"
               android:src="@drawable/ic_avatar_error"/>
           <ImageView
               android:layout_width="20dp"
               android:layout_height="20dp"
               android:src="@drawable/ic_user_right"/>
       </LinearLayout>
       <LinearLayout
           android:id="@+id/ll_user_nickName"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="10dp"
           android:paddingLeft="20dp"
           android:paddingRight="20dp"
           android:background="@drawable/bg_ripple"
           android:orientation="vertical">
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="@drawable/bg_border_bottom"
               android:gravity="center"
               android:paddingTop="15dp"
               android:paddingBottom="15dp"
               android:orientation="horizontal">
               <TextView
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:text="@string/text_user_info_name"
                   android:textSize="14dp"
                   android:textColor="@color/colorBlack"/>
               <TextView
                   android:id="@+id/tv_user_nickName"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text=""
                   android:textSize="14dp"/>
               <ImageView
                   android:layout_width="20dp"
                   android:layout_height="20dp"
                   android:src="@drawable/ic_user_right"/>
           </LinearLayout>
       </LinearLayout>
       <LinearLayout
           android:id="@+id/ll_user_gender"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:background="@drawable/bg_ripple"
           android:paddingLeft="20dp"
           android:paddingRight="20dp"
           android:orientation="vertical">
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:gravity="center"
               android:paddingTop="15dp"
               android:paddingBottom="15dp"
               android:orientation="horizontal">
               <TextView
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:text="@string/text_user_info_sexs"
                   android:textSize="14dp"
                   android:textColor="@color/colorBlack"/>
               <TextView
                   android:id="@+id/tv_user_gender"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text=""
                   android:textSize="14dp"/>
               <ImageView
                   android:layout_width="20dp"
                   android:layout_height="20dp"
                   android:src="@drawable/ic_user_right"/>
           </LinearLayout>
       </LinearLayout>
       <LinearLayout
           android:id="@+id/ll_user_signature"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:background="@drawable/bg_ripple"
           android:layout_marginTop="10dp"
           android:paddingLeft="20dp"
           android:paddingRight="20dp"
           android:orientation="vertical">
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:gravity="center"
               android:paddingTop="15dp"
               android:paddingBottom="15dp"
               android:orientation="horizontal">
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/text_user_info_signatures"
                   android:textSize="14dp"
                   android:textColor="@color/colorBlack"/>
               <TextView
                   android:layout_marginLeft="10dp"
                   android:id="@+id/tv_user_signature"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:gravity="end"
                   android:text=""
                   android:textSize="14dp"/>
               <ImageView
                   android:layout_width="20dp"
                   android:layout_height="20dp"
                   android:src="@drawable/ic_user_right"/>
           </LinearLayout>
       </LinearLayout>
   </LinearLayout>
</LinearLayout>